# fastxpong

./: LICENSE  README.md  pyproject.toml
fastxpong/: api.py  game.py  render.py  types.py
fastxpong/templates/: ball.jinja2  bat.jinja2  forkme.jinja2  index.jinja2  score.jinja2
