[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastxpong"
version = "0.0.1"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi[all]",
    "sse-starlette",
    "requests",
]
